[package]
name = "ratgol"
version = "0.1.0"
edition = "2024"

description = "Conway's Game of Life TUI"
authors = ["Patrick Armengol <patrickarmengol@protonmail.com>"]
readme = "README.md"
documentation = "https://github.com/patrickarmengol/ratgol"
homepage = "https://github.com/patrickarmengol/ratgol"
repository = "https://github.com/patrickarmengol/ratgol"
license = "MIT OR Apache 2.0"

[dependencies]
crossterm = "0.29.0"
color-eyre = "0.6.4"
rand = "0.9.1"
ratatui = "0.30.0-alpha.4"
